--- a/pneumonia_detection_final_code.ipynb
+++ b/pneumonia_detection_final_code.ipynb
@@ -155,6 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+  "state" : {}
     "colab": {
      "base_uri": "https://localhost:8080/"
     },
